--- a/SaouceTest/pom.xml
+++ b/SaouceTest/pom.xml
@@ -15,6 +15,13 @@
   </properties>
 
   <dependencies>
+
+  	<dependency>
+  		<groupId>maven</groupId>
+  		<artifactId>maven-repository-plugin</artifactId>
+  		<version>1.2</version>
+  	</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -53,10 +60,10 @@
         <artifactId>cucumber-core</artifactId>
         <version>1.2.5</version>
     </dependency>
-    <dependency>
-    	<groupId>org.apache.maven.plugins</groupId>
-    	<artifactId>maven-compiler-plugin</artifactId>
-   		 <version>3.8.1</version>
-	</dependency>  
+	<dependency>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.6.1</version>
+	</dependency> 
   </dependencies>
 </project>
